--- a/style.css
+++ b/style.css
@@ -116,13 +116,21 @@ nav ul li{
 }
 
 @media only screen and (max-width: 1100px) {
-    body {
-      background-color: red;
-    }
     span.songName {
         font-size: 12px;
     }
     .container .songList h1{
         font-size: 12px;
     }
-  }
+    .timestamp{
+    margin: 1px 1px;
+    }
+    .fa-3x {
+    font-size: 2em;
+}
+    .songInfo {
+    left: -2vw;
+    margin-top: 24px;
+    margin-right: 15px;
+}
+}
